Stop display from overflowing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     min-height: 100svh;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
